@@ -116,6 +116,12 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
+
 
     </dependencies>
 
@@ -132,25 +138,19 @@
                 </configuration>
             </plugin>
 
-            <!-- Plugin de ejecución JavaFX (portable y sin warnings de JDK 25) -->
+            <!-- 🔥 Plugin JavaFX -->
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>com.example.eduquiz.HelloApplication</mainClass>
-
-                    <!-- Silencia los warnings del JDK 25 -->
-                    <options>
-                        <option>--enable-native-access=ALL-UNNAMED</option>
-                        <option>--add-opens</option>
-                        <option>java.base/java.lang=ALL-UNNAMED</option>
-                    </options>
                 </configuration>
             </plugin>
 
         </plugins>
     </build>
+
 
     <repositories>
         <repository>
@@ -162,5 +162,6 @@
             <url>https://maven.openjfx.io</url>
         </repository>
     </repositories>
+
 
 </project>
